--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libft"]
 	path = libft
 	url = https://github.com/takumasa0222/libft.git
+[submodule "test/lexer_test/ft_get_next_line"]
+	path = test/lexer_test/ft_get_next_line
+	url = https://github.com/takumasa0222/ft_get_next_line.git
