校舎での作業中断のためいったんプッシュ

--- a/test/builtin_test/Makefile
+++ b/test/builtin_test/Makefile
@@ -6,7 +6,7 @@
 #    By: ssoeno <ssoeno@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/10/25 21:34:48 by shokosoeno        #+#    #+#              #
-#    Updated: 2024/11/09 13:42:32 by ssoeno           ###   ########.fr        #
+#    Updated: 2024/11/10 16:13:00 by ssoeno           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -36,6 +36,7 @@ SRCS = ./builtin_tester.c \
 ../../srcs/builtin/builtin_cd.c \
 ../../srcs/builtin/builtin_exit.c \
 ../../srcs/builtin/builtin_pwd.c \
+../../srcs/builtin/builtin_export.c \
 ../../srcs/builtin/lookup_builtin.c \
 ../../srcs/map/item_utils.c \
 ../../srcs/map/map_get.c \
