builtin最低限の機能実装とテストを作成　cdは未実装機能あり（cd -）

--- a/test/builtin_test/Makefile
+++ b/test/builtin_test/Makefile
@@ -6,7 +6,7 @@
 #    By: ssoeno <ssoeno@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/10/25 21:34:48 by shokosoeno        #+#    #+#              #
-#    Updated: 2024/11/16 20:12:45 by ssoeno           ###   ########.fr        #
+#    Updated: 2024/11/17 19:32:22 by ssoeno           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -34,6 +34,7 @@ LIBFT = ${LIBFT_DIR}/libft.a
 
 SRCS = ./builtin_tester.c \
 ../../srcs/builtin/builtin_cd.c \
+../../srcs/builtin/builtin_cd_utils.c \
 ../../srcs/builtin/builtin_exit.c \
 ../../srcs/builtin/builtin_pwd.c \
 ../../srcs/builtin/builtin_export.c \
