pipe.c, pipe_testerを追加。pipe.cは関数が6つあるが（連結リストの操作関数については他のファイルでまとめるか後ほど相談）、それ以外はnorm準拠。テストはecho hello | -l で1を出力することしか確認していないので追加が必要。valgrindでno leaks are possible

--- a/test/pipe_test/Makefile
+++ b/test/pipe_test/Makefile
@@ -6,7 +6,7 @@
 #    By: ssoeno <ssoeno@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/10/25 21:34:48 by shokosoeno        #+#    #+#              #
-#    Updated: 2024/11/23 16:46:29 by ssoeno           ###   ########.fr        #
+#    Updated: 2024/11/23 17:08:41 by ssoeno           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -51,7 +51,7 @@ SRCS = ./pipe_tester.c \
 ../../srcs/map/map_unset.c \
 ../../srcs/utils/error.c \
 ../../srcs/init_env.c \
-../../srcs/pipe/pipe_sample.c
+../../srcs/pipe/pipe.c
 
 OBJS = $(SRCS:.c=.o)
 
