--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,5 +20,6 @@ jobs:
 
     - name: Run tests
       run: |
+        git submodule update -i
         chmod +x ./combination_test/run_test.sh
         ./combination_test/run_test.sh
